// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasePage.Body renders Body 1`] = `
<div>
  <div
    class="body-root page-container"
  >
    <span
      class="children-wrapper"
    >
      Test Test
    </span>
  </div>
</div>
`;

exports[`BasePage.Body renders Body w/ disabled 1`] = `
<div>
  <div
    class="body-root page-container"
  >
    <span
      class="children-wrapper"
    >
      Test Test
    </span>
  </div>
</div>
`;

exports[`BasePage.Body renders Body w/o pageContainer 1`] = `
<div>
  <div
    class="body-root"
  >
    <span
      class="children-wrapper"
    >
      Test Test
    </span>
  </div>
</div>
`;
